# bignum_lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  big_num.c
include/: arithmetic.h  big_num.h  bignum.h  bitwise.h  common.h  config.h  core.h  modular_arithmetic.h  random.h  rsa.h  tests.h  utils.h
include/bignum/: arithmetic.h  bitwise.h  common.h  modular_arithmetic.h  random.h
src/: arithmetic.c  big_num.c  bignum.c  bitwise.c  common.c  core.c  main.c  modular_arithmetic.c  random.c  rsa.c  utils.c
src/bignum/: arithmetic.c  bignum.c  bitwise.c  common.c  modular_arithmetic.c  random.c
test/: main.c  test_bignum_add.c  test_bignum_addmod.c  test_bignum_compare.c  test_bignum_div.c  test_bignum_extended_gcd.c  test_bignum_inverse_mod.c  test_bignum_mod.c  test_bignum_mul.c  test_bignum_mulmod.c  test_bignum_remainder.c  test_bignum_subtract.c
test/arithmetic/: test_bignum_add.c  test_bignum_addmod.c  test_bignum_compare.c  test_bignum_div.c  test_bignum_expmod.c  test_bignum_extended_gcd.c  test_bignum_inverse_mod.c  test_bignum_mod.c  test_bignum_mul.c  test_bignum_mulmod.c  test_bignum_subtract.c
test/random/: test_fermat.c
test/rsa/: test_rsa.c
